--- a/documentation/app/index.html
+++ b/documentation/app/index.html
@@ -6,9 +6,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>TestApp</title>
+    <title>Consul UI Toolkit</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="/images/favicon.svg" />
 
     {{content-for "head"}}
 
